--- a/src/makefile
+++ b/src/makefile
@@ -3,15 +3,26 @@ SRC:=.
 
 ENTRYPOINT:=0x13140
 
+CFLAGS:= -m32
+
+DEBUG:= -g
+INCLUDE:= -I$(SRC)/include
+
+
 $(BUILD)/boot/%.bin: $(SRC)/boot/%.asm
 	$(shell mkdir -p $(dir $@))
 	nasm -f bin $< -o $@
 
 $(BUILD)/kernel/%.o: $(SRC)/kernel/%.asm
 	$(shell mkdir -p $(dir $@))
-	nasm -f elf32 $< -o $@
+	nasm -f elf32 $(DEBUG) $< -o $@
 
-$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o
+$(BUILD)/kernel/%.o: $(SRC)/kernel/%.c
+	$(shell mkdir -p $(dir $@))
+	gcc $(CFLAGS) $(DEBUG) $(INCLUDE) -c $< -o $@
+
+$(BUILD)/kernel.bin: $(BUILD)/kernel/start.o \
+	$(BUILD)/kernel/main.o
 	$(shell mkdir -p $(dir $@))
 	ld -m elf_i386 -s $^ -o $@ -Ttext $(ENTRYPOINT)
 
